Make host regression tests portable across Windows and Linux